trying to build to github pages

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
 
     
     <p>I&rsquo;m Shilpa. You&rsquo;re probably someone I admire and want to keep updated on my life.
-This is a repository for the coolest things I&rsquo;ve worked on.kjkj
+This is a repository for the coolest things I&rsquo;ve worked on.
 I love making things.</p>
     
 </div>
@@ -154,7 +154,7 @@ I love making things.</p>
 
     <div>
         <p class="line-title">
-            <a href="/posts/cuttingboards/">
+            <a href="/posts/cuttingboards/cuttingboards/">
                 Cuttingboards
             </a>
         </p>
