--- a/public/404.html
+++ b/public/404.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en-us"
   dir="ltr">
 
@@ -14,9 +15,20 @@
 
 
 
-<link rel="stylesheet" href="/assets/combined.min.b357350626e456d3eb0a6cc6a6195c39ef417483bca875072ff17ad8b0c6db9c.css" media="all">
+
+<link rel="stylesheet" href="/assets/combined.min.216337488c08235d8da2a239447b59a9e2b0004442c7e3aea27abb5cbd7808ab.css" media="all">
+
+<link rel="stylesheet" href="http://localhost:1313/css/custom.min.ebf4c26ef8f05106e99ee8cd24229b4c3bcf21a3dbdcecbf36254145e00c1ad7.css">
 
 
+
+
+    
+
+
+<link rel="stylesheet" href="/assets/combined.min.216337488c08235d8da2a239447b59a9e2b0004442c7e3aea27abb5cbd7808ab.css" media="all">
+
+<link rel="stylesheet" href="http://localhost:1313/css/custom.min.ebf4c26ef8f05106e99ee8cd24229b4c3bcf21a3dbdcecbf36254145e00c1ad7.css">
 
   </head>
 
@@ -118,7 +130,7 @@
     window.matchMedia('(prefers-color-scheme: dark)').addListener(invertBody);
   }
 
-  setTheme();
+  setTheme(); 
 
 </script>
 
